--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
             <a class="navbar-brand" href="/"">AppLogo</a>
         </div>
         <ul class="nav navbar-nav">
-            <li data-match-route="post/published"><a href="post/published">Post (Published)</a></li>
+            <li data-match-route="article/index"><a href="article/index">Article</a></li>
             <li data-match-route="post/draft"><a href="post/draft">Post (Draft)</a></li>
             <li login></li>
         </ul>
@@ -60,6 +60,6 @@
 <script src="vendor/angular-strap/dist/angular-strap.tpl.min.js"></script>
 
 <script src="app.js"></script>
-
+<script src="modules/article/controllers/ArticleCtrl.js"></script>
 </body>
 </html>
